<resources>
    <string name="app_name">MasterTSA</string>
    <string name="max_acceleration">Max acceleration</string>
    <string name="max_X">Max X</string>
    <string name="max_Y">Max Y</string>
    <string name="_0_0">0.0</string>
    <string name="max_Z">Max Z</string>
    <string name="current_acceleration">Current acceleration</string>
    <string name="XAxis">X Axis</string>
    <string name="YAxis">Y Axis</string>
    <string name="ZAxis">Z Axis</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="visible">Visible</string>
    <string name="list">List</string>
    <string name="bluetooth">Bluetooth</string>
</resources>